force-app/main/default/objects/IT_Contact_Association__c/IT_Contact_Association__c.object-meta.xml
<CustomObject>
    <label>Contact Association</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Contact Association</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Association</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>