force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Activity_SF__c.field-meta.xml
<CustomField>
    <fullName>IT_Activity_SF__c</fullName>
    <label>Activity SF</label>
    <length>6</length>
    <type>Text</type>
</CustomField>