force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Association__c.field-meta.xml
<CustomField>
    <fullName>IT_Association__c</fullName>
    <formula>CASE( IT_Type__c ,
&quot;AM&quot;,HYPERLINK(&quot;/&quot;&amp;IT_Financial_Center__c, IT_Financial_Center__r.Name),
&quot;F&quot;,HYPERLINK(&quot;/&quot;&amp;IT_Financial_Center__c, IT_Financial_Center__r.Name),
&quot;AT&quot;,HYPERLINK(&quot;/&quot;&amp;IT_Distribution_Point__r.IT_Financial_Center__c, IT_Distribution_Point__r.IT_Financial_Center__r.Name) &amp; &quot; - &quot; &amp; HYPERLINK(&quot;/&quot;&amp;IT_Distribution_Point__c, IT_Distribution_Point__r.Name),
&quot;C&quot;,HYPERLINK(&quot;/&quot;&amp;IT_Delivery_Site__r.ER_Financial_Center__c,IT_Delivery_Site__r.ER_Financial_Center__r.Name) &amp; &quot; - &quot; &amp; HYPERLINK(&quot;/&quot;&amp;IT_Delivery_Site__c, IT_Delivery_Site__r.Name), 
HYPERLINK(&quot;/&quot;&amp;IT_Financial_Center__c, IT_Financial_Center__r.Name)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IT Association</label>
    <type>Text</type>
</CustomField>