force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Association_Naming__c.field-meta.xml
<CustomField>
    <fullName>IT_Association_Naming__c</fullName>
    <formula>IT_Contact_Detail__r.Name + 
IF(NOT(ISBLANK(IT_Contact__r.FirstName)),&quot; &quot;+IT_Contact__r.FirstName,&quot; &quot;) + &quot;(&quot; + IT_Code__c + &quot;)&quot; + IT_Contact__r.LastName + &quot; &quot; + IF(IT_Order_Confirm_Address__c,&quot;- Ordini&quot;,&quot;&quot;) + IF(IT_Billing_Confirm_Address__c,&quot;- Fatture&quot;,&quot;&quot;) + IF(IT_Notifications__c,&quot;- Comunicazioni&quot;,&quot;&quot;) + IF(IT_Send_SUT__c, &quot;- Invio Sut&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IT_Association_Naming</label>
    <type>Text</type>
</CustomField>