force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Association_Progressive__c.field-meta.xml
<CustomField>
    <fullName>IT_Association_Progressive__c</fullName>
    <label>Association Progressive</label>
    <length>6</length>
    <type>Text</type>
</CustomField>