force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Client_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Client_Code__c</fullName>
    <externalId>true</externalId>
    <label>Client Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>