force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Code__c</fullName>
    <label>Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>