force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Contact__c.field-meta.xml
<CustomField>
    <fullName>IT_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IT_Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Dettagli Contatto</relationshipLabel>
    <relationshipName>IT_Contact_Association</relationshipName>
    <type>Lookup</type>
</CustomField>