force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Contact_Association_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Contact_Association_Type__c</fullName>
    <formula>IT_Contact_Detail__r.IT_Contact_Detail_Type__c  + &quot; &quot; + &quot;/&quot; + &quot; &quot; +  IT_Financial_Center__r.Name  + &quot; &quot; + BR() +

IT_Delivery_Site__r.IT_Name_and_Address__c + &quot; &quot; +   BR() +
 IT_Distribution_Point__r.IT_Name_and_Address__c</formula>
    <label>Contact Association Type</label>
    <type>Text</type>
</CustomField>