force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Contact_Detail__c.field-meta.xml
<CustomField>
    <fullName>IT_Contact_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Detail</label>
    <referenceTo>IT_Contact_Detail__c</referenceTo>
    <relationshipLabel>Contact Detail</relationshipLabel>
    <relationshipName>Contact_Association</relationshipName>
    <type>Lookup</type>
</CustomField>