force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>IT_Contact_Id__c</fullName>
    <formula>IT_Contact_Detail__r.IT_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Id</label>
    <type>Text</type>
</CustomField>