force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>IT_Contact_Info__c</fullName>
    <label>Contact Info</label>
    <length>60</length>
    <type>Text</type>
</CustomField>