force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Delivery_Site__c.field-meta.xml
<CustomField>
    <fullName>IT_Delivery_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Site</label>
    <referenceTo>ER_Delivery_Site__c</referenceTo>
    <relationshipLabel>Contact Detail</relationshipLabel>
    <relationshipName>Contact_Association</relationshipName>
    <type>Lookup</type>
</CustomField>