force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Detail_Type_c__c.field-meta.xml
<CustomField>
    <fullName>IT_Detail_Type_c__c</fullName>
    <label>IT_Detail_Type__c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
            </value>
            <value>
                <fullName>002</fullName>
            </value>
            <value>
                <fullName>003</fullName>
            </value>
            <value>
                <fullName>004</fullName>
            </value>
            <value>
                <fullName>005</fullName>
            </value>
            <value>
                <fullName>006</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>