force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Fatture__c.field-meta.xml
<CustomField>
    <fullName>IT_Fatture__c</fullName>
    <formula>IT_Contact_Detail__r.IT_Billing_Confirm_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fatture</label>
    <type>Checkbox</type>
</CustomField>