force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Financial_Center__c.field-meta.xml
<CustomField>
    <fullName>IT_Financial_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Center</label>
    <referenceTo>ER_Financial_Center__c</referenceTo>
    <relationshipLabel>Contact Detail</relationshipLabel>
    <relationshipName>Contact_Association</relationshipName>
    <type>Lookup</type>
</CustomField>