force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Future_Change_Contact_Association__c.field-meta.xml
<CustomField>
    <fullName>IT_Future_Change_Contact_Association__c</fullName>
    <label>Future Change Contact Association</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>