force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>IT_Main_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Contact</label>
    <type>Checkbox</type>
</CustomField>