force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Notifications__c.field-meta.xml
<CustomField>
    <fullName>IT_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notifications</label>
    <type>Checkbox</type>
</CustomField>