force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Ordini__c.field-meta.xml
<CustomField>
    <fullName>IT_Ordini__c</fullName>
    <formula>IT_Contact_Detail__r.IT_Order_Confirm_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordini</label>
    <type>Checkbox</type>
</CustomField>