force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Recapito__c.field-meta.xml
<CustomField>
    <fullName>IT_Recapito__c</fullName>
    <formula>IT_Contact_Detail__r.IT_Contact_Info__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recapito</label>
    <type>Text</type>
</CustomField>