force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Send_SUT__c.field-meta.xml
<CustomField>
    <fullName>IT_Send_SUT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send SUT</label>
    <type>Checkbox</type>
</CustomField>