force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Tipo_Apparato__c.field-meta.xml
<CustomField>
    <fullName>IT_Tipo_Apparato__c</fullName>
    <formula>CASE(TEXT(IT_Contact_Detail__r.IT_Apparatus_Type__c),
&quot;001&quot;,&quot;Phone&quot;,
&quot;002&quot;,&quot;Fax&quot;,
&quot;005&quot;,&quot;Mail&quot;,
&quot;007&quot;,&quot;Mail PEC&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo Apparato</label>
    <type>Text</type>
</CustomField>