force-app/main/default/objects/IT_Contact_Association__c/fields/IT_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Type__c</fullName>
    <label>Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>