force-app/main/default/objects/IT_Contact_Association__c/validationRules/VRIT02_Order_Confirm_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT02_Order_Confirm_Address</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
						$User.ER_BypassVR__c = False,
ISPICKVAL(	$User.ER_Business_Unit__c , &#39;IT&#39;),
				
								 ISPICKVAL( IT_Contact_Detail__r.IT_Apparatus_Type__c ,&#39;001&#39;),
					 IT_Order_Confirm_Address__c )</errorConditionFormula>
    <errorMessage>&#39;Order Confirm Address&#39; field cannot be selected because the Apparatus Type is &#39;Phone&#39;</errorMessage>
</ValidationRule>