force-app/main/default/objects/IT_Contact_Association__c/validationRules/VRIT05_FlagsForRef.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT05_FlagsForRef</fullName>
    <active>true</active>
    <description>Blocks the change to 4 flags if the related contact is &quot;Ref&quot;</description>
    <errorConditionFormula>AND (
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
NOT(ISNEW()),
ISPICKVAL(  IT_Contact_Detail__r.IT_Contact__r.IT_Type__c  , &#39;Ref&#39;),
OR(
ISCHANGED(IT_Send_SUT__c),
ISCHANGED(IT_Order_Confirm_Address__c),
ISCHANGED(IT_Notifications__c),
ISCHANGED(IT_Billing_Confirm_Address__c)
)

)</errorConditionFormula>
    <errorMessage>Related contact is &quot;Ref&quot;, you cannot change any flag.</errorMessage>
</ValidationRule>