force-app/main/default/objects/IT_Contact_Association__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IT_Contact_Id__c</columns>
    <columns>IT_Contact_Detail__c</columns>
    <columns>IT_Recapito__c</columns>
    <columns>IT_Code__c</columns>
    <columns>IT_Financial_Center__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IT_Client_Code__c</field>
        <operation>equals</operation>
        <value>483491</value>
    </filters>
    <filters>
        <field>IT_Ordini__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Tutto</label>
</ListView>